--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "http-proxy": "^1.11.2",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "superagent": "^1.3.0"
   }
 }
