--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.13.3",
     "http-proxy": "^1.11.2",
     "react": "^0.13.3",
-    "superagent": "^1.3.0"
+    "superagent": "^1.3.0",
+    "webpack": "^1.12.1"
   }
 }
