--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "http-proxy": "^1.11.2",
     "react": "^0.13.3",
     "superagent": "^1.3.0",
-    "webpack": "^1.12.1"
+    "webpack": "^1.12.1",
+    "babel-core": "^5.8.23",
+    "babel-loader": "^5.3.2"
   }
 }
