--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
   "devDependencies": {
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
+    "css-loader": "^0.17.0",
     "file-loader": "^0.8.4",
+    "node-sass": "^3.3.2",
     "react-hot-loader": "^1.3.0",
+    "sass-loader": "^2.0.1",
+    "style-loader": "^0.12.3",
     "webpack": "^1.12.1",
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
+    "babel-core": "^5.8.23",
+    "babel-loader": "^5.3.2",
+    "css-loader": "^0.17.0",
     "express": "^4.13.3",
     "http-proxy": "^1.11.2",
     "react": "^0.13.3",
+    "sass-loader": "^2.0.1",
     "superagent": "^1.3.0",
-    "webpack": "^1.12.1",
-    "babel-core": "^5.8.23",
-    "babel-loader": "^5.3.2"
+    "webpack": "^1.12.1"
   }
 }
