--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "babel-loader": "^5.3.2",
     "css-loader": "^0.17.0",
     "file-loader": "^0.8.4",
+    "fluxxor": "^1.7.1",
     "node-sass": "^3.3.2",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.1",
     "webpack-dev-server": "^1.10.1"
   },
@@ -29,10 +31,13 @@
     "babel-loader": "^5.3.2",
     "css-loader": "^0.17.0",
     "express": "^4.13.3",
+    "fluxxor": "^1.7.1",
     "http-proxy": "^1.11.2",
     "react": "^0.13.3",
     "sass-loader": "^2.0.1",
+    "style-loader": "^0.12.3",
     "superagent": "^1.3.0",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.1"
   }
 }
