--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^0.17.0",
     "express": "^4.13.3",
     "fluxxor": "^1.7.1",
+    "gmaps": "^0.4.18",
     "http-proxy": "^1.11.2",
     "react": "^0.13.3",
     "sass-loader": "^2.0.1",
